include_directories(../modules)

add_subdirectory(pktgen)
add_subdirectory(machnet)
add_subdirectory(msg_gen)
add_subdirectory(shaper)
add_subdirectory(pqp)
add_subdirectory(policer)
add_subdirectory(fairpolicer)
add_subdirectory(wfairpolicer)
add_subdirectory(bcpqp)
add_subdirectory(wbcpqp)
add_subdirectory(ping)
add_subdirectory(rocksdb_server)
add_subdirectory(jring_perf)
add_subdirectory(jring2_perf)
